example/secondfile/objects/Account_End_Customer_Junction__c.object
<CustomObject>
    <description>A many-to-many object which holds the information from Account and End customer i.e. One SP Account can have many end customers and One end customer can have multiple SP Accounts</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related End Customers</relationshipLabel>
        <relationshipName>Account_End_Customer_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check__c</fullName>
        <label>Duplicate Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Customer_Status__c</fullName>
        <formula>TEXT(End_Customer__r.Endcustomer_Status__c)</formula>
        <label>End Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <referenceTo>End_Customer__c</referenceTo>
        <relationshipLabel>Related SP Accounts</relationshipLabel>
        <relationshipName>Account_End_Customer_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shared_ECJ__c</fullName>
        <formula>IF(End_Customer__r.Shared_EC__c,&quot;True&quot;,&apos;False&apos;)</formula>
        <label>Shared ECJ</label>
        <type>Text</type>
    </fields>
    <label>Account End Customer - Junction</label>
    <nameField>
        <displayFormat>AEJ-{0000}</displayFormat>
        <label>Account End Customer Junction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account End Customer - Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Edit_Button_Control</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 Shared_ECJ__c == &quot;True&quot;,
 End_Customer_Status__c !=&quot;Shared&quot;
)</errorConditionFormula>
        <errorMessage>The End Customer Status should be &quot;Shared&quot;</errorMessage>
    </validationRules>
</CustomObject>